--- a/src/style.css
+++ b/src/style.css
@@ -142,7 +142,7 @@ html {
 }
 
 body {
-    font: 400 16px "Source Sans Pro", -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
+    font: 400 16px "HiraginoSansGB-W3";
     color: #2B3A42;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -179,25 +179,86 @@ a:hover {
     z-index: 1;
     padding-top: 12px;
     padding-bottom: 12px;
-    color: rgba(255, 255, 255, 0.75);
-    background-color: #24292e;
+    color: #000000;
+    background-color: #ffffff;
 }
 
 .container {
-    width: 100%;
-    max-width: 1200px;
+    width: 1280px;
     margin: 0 auto;
+    padding: 0 40px;
 }
 
 .navigation__logo {
-    margin: auto;
+    margin: 30px auto;
 }
 
 .logo {
     float: left;
     width: auto;
-    height: 35px;
+    height: 67px;
     opacity: 0.9;
     -webkit-transition: opacity 250ms;
     transition: opacity 250ms;
+}
+
+.navigation__inner {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    position: relative;
+    padding: 0 40px;
+}
+
+@media (min-width: 1280px) {
+    .navigation__inner {
+        padding: 0 40px;
+    }
+}
+
+.navigation__links {
+    -webkit-box-flex: 1;
+    -ms-flex: 1 1 auto;
+    flex: 1 1 auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: end;
+    -ms-flex-pack: end;
+    justify-content: flex-end;
+}
+
+.navigation__link {
+    display: inline-block;
+    font-size: 16px;
+    text-transform: uppercase;
+    color: #000000;
+    -webkit-transition: all 250ms;
+    transition: all 250ms;
+    margin: 55px 24px;
+    line-height: 1;
+}
+
+.navigation__link:last-child {
+    margin-right: 24px;
+}
+
+.navigation__link--active {
+    color: #ffffff;
+    padding: 12px 27.5px;
+    background: #FF6219;
+    border-radius: 5px;
+    -webkit-transition: all 250ms;
+    transition: all 250ms;
+    margin: 43px 24px;
+}
+
+.navigation__link--active:hover {
+    color: #ffffff;
 }
