--- a/src/style.css
+++ b/src/style.css
@@ -213,12 +213,6 @@ a:hover {
     padding: 0 40px;
 }
 
-@media (min-width: 1280px) {
-    .navigation__inner {
-        padding: 0 40px;
-    }
-}
-
 .navigation__links {
     -webkit-box-flex: 1;
     -ms-flex: 1 1 auto;
@@ -261,4 +255,223 @@ a:hover {
 
 .navigation__link--active:hover {
     color: #ffffff;
+}
+
+.jumbotron {
+    position: relative;
+    padding-top: 117px;
+    padding-bottom: 159px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+.jumbotron {
+    padding-top: 117px;
+    padding-bottom: 49px;
+}
+
+.jumbotron-codelines {
+    min-width: 1280px;
+    background: url(futian-bg.jpg);
+    background-position: center;
+    background-size: cover;
+}
+
+.container-lg {
+    max-width: 1280px;
+    padding: 0 40px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.position-relative {
+    position: relative !important;
+}
+
+.flex-items-center {
+    -webkit-box-align: center !important;
+    align-items: center !important;
+}
+
+.d-md-flex {
+    display: -webkit-box !important;
+    display: flex !important;
+}
+
+.col-md-7 {
+    width: 847px;
+    height: 304px;
+    padding-right: 24px !important;
+    padding-left: 81px !important;
+}
+
+.col-md-5 {
+    width: 353px;
+    padding: 0 23px;
+}
+
+.rounded-1 {
+    color: #666666;
+    /* opacity: 0.58;
+    background: #FFFFFF; */
+    background: rgba(255, 255, 255, .58);
+    box-shadow: 0 0 4px 0 rgba(200, 197, 197, 0.50);
+    padding: 30px 26px 58px 25px !important;
+}
+
+.rounded-1 h2 {
+    font-family: HiraginoSansGB-W6;
+    font-size: 20px;
+    line-height: 1;
+    color: #666666;
+    padding-bottom: 26px;
+}
+
+input,
+select,
+textarea,
+button {
+    font-family: inherit;
+    font-size: inherit;
+    line-height: inherit;
+}
+
+.form-control,
+.form-select {
+    min-height: 34px;
+    padding: 6px 8px;
+    font-size: 14px;
+    line-height: 14px;
+    color: #24292e;
+    vertical-align: middle;
+    background-color: #fff;
+    background-repeat: no-repeat;
+    background-position: right 8px center;
+    border: 1px solid #d1d5da;
+    border-radius: 3px;
+    outline: none;
+    box-shadow: inset 0 1px 2px rgba(27, 31, 35, 0.075);
+}
+
+.input-block {
+    display: block;
+    width: 100%;
+}
+
+.form-group .form-control {
+    width: 440px;
+    max-width: 100%;
+    margin-right: 5px;
+    background-color: #ffffff;
+}
+
+.home-hero-signup .form-control-lg {
+    width: 100%;
+    min-height: 38px;
+    padding: 10px 20px;
+    font-size: 13px;
+    line-height: 1;
+    border-radius: 0;
+}
+
+.form-group {
+    margin: 26px 0;
+}
+
+.mt-0 {
+    margin-top: 0 !important;
+}
+
+.btn {
+    position: relative;
+    display: inline-block;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1;
+    white-space: nowrap;
+    vertical-align: middle;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    background-repeat: repeat-x;
+    background-position: -1px -1px;
+    background-size: 110% 110%;
+    border: 1px solid rgba(27, 31, 35, 0.2);
+    border-radius: 0.25em;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+}
+
+.btn {
+    color: #24292e;
+    background-color: #eff3f6;
+    background-image: linear-gradient(-180deg, #fafbfc 0%, #eff3f6 90%);
+}
+
+.btn-primary {
+    color: #fff;
+    background-color: #FFA81A;
+    background-image: linear-gradient(-180deg, rgb(248, 182, 77) 0%, rgb(241, 153, 11) 90%);
+}
+
+.btn-large {
+    padding: 11px 20px;
+    font-size: inherit;
+    border-radius: 5px;
+}
+
+.btn-block {
+    display: block;
+    width: 100%;
+    text-align: center;
+}
+
+.f4 {
+    font-size: 16px !important;
+}
+
+.alt-lead {
+    font-family: HiraginoSansGB-W3;
+    position: relative;
+    font-size: 14px;
+    color: #FFFFFF;
+    background: rgba(0, 0, 0, .71);
+    border-radius: 100px;
+    padding: 8px 17px 8px 58px;
+    line-height: 1.25;
+}
+
+.mb-4 {
+    width: 352px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+.futian-loudspeaker {
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    background: url(futian-loudspeaker.png);
+    background-repeat: no-repeat;
+    left: 19px;
+}
+
+.text-md-left {
+    margin-top: 77px;
+}
+
+.footer {
+    width: 100%;
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 auto;
+    flex: 0 0 auto;
+    padding-top: 70px;
+    text-align: center;
+    color: #9aa5b8;
+    font-size: 12px;
 }
