--- a/src/style.css
+++ b/src/style.css
@@ -494,6 +494,19 @@ button {
     border: 1px solid #efefef;
 }
 
+.come-soon {
+    height: 520px;
+    text-align: center;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+}
+
+.come-soon .tip {
+    margin: auto;
+}
+
 input::-webkit-input-placeholder {
     color: #B3B3B3;
 }
